--- a/razas.html
+++ b/razas.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="media/ico.ico" />
 
-  <title>Razas DyP</title>
+  <title>            CAFÉ CON DRAGONES
+</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
     rel="stylesheet">
@@ -612,8 +613,9 @@
 <body>
   <div class="container">
     <header class="header">
-      <a href="https://z95b.github.io/DyP">
-        <h1 class="title">Dragonas y Perronas</h1>
+      <a href="index.html">
+        <h1 class="title">            CAFÉ CON DRAGONES</h1>
+
       </a>
     </header>
 
