--- a/razas.html
+++ b/razas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="media/ico.ico" />
+  <link rel="icon" type="image/x-icon" href="ico.ico" />
 
   <title>            CAFÉ CON DRAGONES
 </title>
@@ -395,8 +395,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: linear-gradient(45deg,
-          rgba(157, 0, 255, 0.1));
+  
     }
 
     .race-content {
