--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casino de Dragonas y Perronas</title>
+    <title> STATS - CAFÉ CON DRAGONES </title>
     <style>
         :root {
             --neon-red: #ff003c;
@@ -228,7 +228,7 @@
     <div class="container">
         <div class="title-container">
             <div class="neon-sign">
-                <a href="index.html"><h1 >Dragonas y Perronas</h1></a>
+                <a href="index.html"><h1 >CAFÉ CON DRAGONES </h1></a>
             </div>
         </div>
 
